# bank-statement-pipeline

./: .dockerignore  .gitignore  README.md  dockerfile  main.py  pyproject.toml
bank_statement_pipeline/connection/: gmail_connector.py  google_connector.py  outlook_connection.py
bank_statement_pipeline/pipeline/: pipeline.py
bank_statement_pipeline/pipeline/extract/: base_email_extractor.py  gmail_extractor.py  outlook_email_extractor.py
bank_statement_pipeline/pipeline/load/: google_sheets_writer.py
bank_statement_pipeline/pipeline/transform/: pdf_to_dataframe.py
bank_statement_pipeline/script/: load_config.py
