[tool.poetry]
name = "bank-statement-pipeline"
version = "0.1.0"
description = ""
authors = ["Luiz Eduardo Malanczyn de Oliveira <oliveiraluiz.com@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "^2.2.3"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.2"
python-dotenv = "^1.1.0"
google-api-python-client = "^2.166.0"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
imapclient = "^3.0.1"
prefect = "^3.3.3"
loguru = "^0.7.3"
msal = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
